# cpp_serializers_benchmark

./: .gitmodules  CMakeLists.txt  README.md
bitscpp/: CMakeLists.txt  Writer_v2.cxx  bitscpp.cpp  bitscpp_compressed_float.cpp  bitscpp_compressed_float_unsafe_read.cpp  bitscpp_unsafe.cpp  bitscpp_v2.cpp  buffer.hpp
testing_core/: test.cpp
testing_core/testing/: test.h  types.h
tools/: package-lock.json
zpp_bits/: CMakeLists.txt
